--- a/Assignment_2/Assignment_2.ipynb
+++ b/Assignment_2/Assignment_2.ipynb
@@ -172,9 +172,11 @@
     "collapsed": true
    },
    "source": [
-    "I removed all values which were greater than factor 10 for volatile acidity, density and alcohol % with array = array[abs(array[:,1]) < 20] where I removed anything that was greater than 20 for volatile acidity, anything greater than 10 for density and anything greater than 200 for alcohol.\n",
+    "First I displayed all graphs with two for loops, creating a histogram and a boxplot for each attribute.\n",
     "\n",
-    "The new graphs are much more meaningful for these three attributes. In the first graphs there was one big spike on the left with nothing else in the graph and a gigantic scale. Now the graph is more spread out and shows more about the data."
+    "Then I removed all values which were greater than factor 10 for volatile acidity, density and alcohol % with 'array = array[abs(array[:,1]) < x]' where I removed anything that was greater than 20 for volatile acidity, anything greater than 10 for density and anything greater than 200 for alcohol.\n",
+    "\n",
+    "By doing this we can see that for those attributes the new graphs are much more meaningful. The first graph was just a big spike and didn't really tell anything other than the fact that there were probably some outliers. The new graph shows actual data in a meaningful way."
    ]
   },
   {
@@ -235,7 +237,9 @@
    "source": [
     "Looking at above graphs we can see a few attributes that have a correlation with the score.\n",
     "\n",
-    "The wines with a high score have a lower acidity than the mean. Theres also less chlorides in wines with a high score. It also seems that wines with a low alcohol % tend to have worse scores than wines with a higher alcohol %."
+    "The only high scores in adicity are wines with a high score. There are barely any wines with a high score that have a high adicity. \n",
+    "\n",
+    "It does also seem like the wines with a low alcohol percentage don't tend to score high while the wines with a high alcohol percentage tend to score higher."
    ]
   },
   {
